# check-file-type

./: AUTHORS  ChangeLog  README.md  README.rst  setup.cfg
check_file_type/: check_type.py
