[metadata]
name = check-file-type 
summary = A tool to check the type of file
description-file =
    README.rst
author = Ghanshyam Mann
author-email = gmann@ghanshyammann.com
home-page = https://github.com/gmannos/check-file-type/blob/master/README.rst
python-requires = >=3.6

[files]
packages =
    check_file_type

[entry_points]
console_scripts =
    check-file-type = check_file_type.check_type:check_type
